# stemshim

./: .gitignore  Cargo.toml  Makefile  README.md
src/: hook-open.c  lib.rs  stemshim.h
tests/: open.c
tools/: gen-wrapper.py  libc.txt
