[package]
name = "stemshim"
version = "0.0.1"
authors = ["Mickaël Salaün <mickael.salaun@ssi.gouv.fr>"]
description = "Shim for compatibility with StemJail"
repository = "https://github.com/stemjail/stemshim"
readme = "README.md"
keywords = ["linux", "system"]
license = "LGPL-3.0"

[lib]
name = "stemshim"
crate-type = ["dylib"]

[dependencies.stemjail]
path = "../stemjail"
version = ">= 0.2.0"
