[package]
name = "stemshim"
version = "0.3.0"
authors = ["Mickaël Salaün <mic@digikod.net>"]
description = "Shim for compatibility with StemJail"
repository = "https://github.com/stemjail/stemshim"
readme = "README.md"
keywords = ["linux", "system"]
license = "LGPL-3.0"
exclude = [".gitignore"]

[lib]
name = "stemshim"
crate-type = ["dylib"]

[dependencies.stemjail]
path = "../stemjail"
version = ">= 0.3.0"
