[package]
name = "stemshim"
version = "0.4.1"
authors = ["Mickaël Salaün <mic@digikod.net>"]
description = "Shim for compatibility with StemJail"
repository = "https://github.com/stemjail/stemshim"
readme = "README.md"
keywords = ["linux", "system"]
license = "LGPL-3.0"
exclude = [".gitignore"]

[lib]
name = "stemshim"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
stemjail = "0.4"
